--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -43,7 +43,4 @@ jobs:
           bandit -r . -f json -o bandit_report.json  # Run Bandit recursively from the current directory and generate a report
           
       - name: Upload Bandit Report as Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: bandit-report
-          path: bandit_report.json  # Upload the Bandit report file as an artifact for review
+        uses: acti
