--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -43,4 +43,7 @@ jobs:
           bandit -r . -f json -o bandit_report.json  # Run Bandit recursively from the current directory and generate a report
           
       - name: Upload Bandit Report as Artifact
-        uses: acti
+        uses: actions/upload-artifact@v4  # Ensure that this is correctly specified
+        with:
+          name: bandit-report
+          path: bandit_report.json  # Upload the Bandit report file as an artifact for review
