--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -1,29 +1,17 @@
-name: Bandit Security Scan
+name: Bandit Code Scan
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
 jobs:
   bandit:
-    name: Run Bandit
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
+    - name: Install Bandit
+      run: pip install bandit
 
-      - name: Install Bandit
-        run: |
-          python -m pip install --upgrade pip
-          pip install bandit
-
-      - name: Run Bandit
-        run: bandit -r .
+    - name: Run Bandit
+      run: bandit -r .
