--- a/.github/workflows/codesweep.yml
+++ b/.github/workflows/codesweep.yml
@@ -1,20 +1,22 @@
 name: "HCL AppScan CodeSweep"
+
 on:
   pull_request:
-    types: [opened,synchronize]
+    types: [opened, synchronize]  # Triggers the action when a PR is opened or updated
+
 jobs:
   scan:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Ensures the full history is fetched, not just the latest commit
+
       - name: Run AppScan CodeSweep
-        uses: HCL-TECH-SOFTWARE/appscan-codesweep-action@v2
-        with:
-          asoc_key: ${{secrets.ASOC_KEY}}
-          asoc_secret: ${{secrets.ASOC_SECRET}}
-          status: failure
-    env: 
-      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        uses: HCL-TECH-SOFTWARE/appscan-codesweep-action@v2.1  # Runs the AppScan CodeSweep action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Provides the token for authentication
+
+      # Optionally, you can add another step to upload the results as a GitHub artifact or take further actions if needed.
